--- a/portafolio.html
+++ b/portafolio.html
@@ -121,6 +121,8 @@
           </div>
         </div>
       </section>
+
+      <section class="certificados"></section>
     </main>
   </body>
   <script src="javascript/portafolio.js"></script>
