cambio de nombres a los proyectos

--- a/portafolio.html
+++ b/portafolio.html
@@ -85,7 +85,7 @@
                 alt="Proyecto de la Tienda"
               />
               <p class="texto-superpuesto texto__superpuesto--Tienda">
-                Proyecto de la Tienda
+                Tienda online
               </p>
             </a>
           </div>
@@ -100,7 +100,7 @@
                 alt="Proyecto de Conversor de Moneda"
               />
               <p class="texto-superpuesto texto__superpuesto--Conversor">
-                Proyecto de Conversor de Moneda
+                Conversor de Moneda
               </p>
             </a>
           </div>
@@ -115,7 +115,7 @@
                 alt="Proyecto de Gym"
               />
               <p class="texto-superpuesto texto__superpuesto--Gym">
-                Proyecto de Gym
+                Gym olimpus
               </p>
             </a>
           </div>
