Nuevo boton de curriculum

--- a/portafolio.html
+++ b/portafolio.html
@@ -20,6 +20,7 @@
         <li class="item"><a href="#Skills" class="link">Skills</a></li>
         <li class="item"><a href="#proyectos" class="link">Proyectos</a></li>
         <li class="item"><a href="#contactos" class="link">Contacto</a></li>
+        <li class="curriculum"><a href="#curriculum">CV</a></li>
       </ul>
     </nav>
     <header class="encabezado">
